fixed some contrast issues

--- a/education-styles.css
+++ b/education-styles.css
@@ -49,10 +49,8 @@ nav li {
     display: block;
     text-decoration: none;
     font-size: calc(2px + 2vw);
-    padding: 2vh 2vh;
-    width: 80%;
+    padding: 2vh 0;
     margin: 4vh auto;
-    background: lightseagreen;
 }
 
 nav a {
